# HyperDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/app/: Application.cpp  Application.h  Event.h
application/common/: common.h
application/form/: MainWindow.ui
application/ui/window/: MainWindow.cpp  MainWindow.h
cmake/: android.cmake  ios.cmake  macos.cmake  windows.cmake
src/: main.cpp
src/app/: Application.cpp  Application.h  UIEvent.h
src/common/: LogManager.cpp  LogManager.h  common.h
src/form/: MainWindow.ui
src/ui/window/: CanvasWidget.cpp  CanvasWidget.h  CanvasWidget.mm  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt
tests/EmbossFilter/: CMakeLists.txt  EmbossFilterApp.cpp  EmbossFilterApp.h  main.cpp
tests/GaussianBlur/: CMakeLists.txt  GaussianBlurApp.cpp  GaussianBlurApp.h  main.cpp
tests/Liquify/: CMakeLists.txt  LiquifyApp.cpp  LiquifyApp.h  main.cpp
tests/Selection/: CMakeLists.txt  SelectionApp.cpp  SelectionApp.h  main.cpp
tests/ShadowEffect/: CMakeLists.txt  ShadowEffectApp.cpp  ShadowEffectApp.h  main.cpp
tests/SwirlWarpEffect/: CMakeLists.txt  SwirlWarpApp.cpp  SwirlWarpApp.h  main.cpp
tests/section/: CMakeLists.txt  SectionApp.cpp  SectionApp.h  main.cpp
